--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 SILICA . day <span id = "days"></span> . <span id = "light-phrase"></span>
 
-
-<div title = "no functionality yet LOOOL" style = "font-size: smaller; position: absolute; top: 7.5px; right: 7.5px;">
-	save . load . export .  import
-</div>
 <hr>
 </header>
 
+<div title = "no functionality yet LOOOL" style = "font-size: smaller; position: absolute; top: 7.5px; right: 7.5px;">
+	save . load . export .  import
+
+</div>
 <div class = "body-grid">
 	
 	<!-- left -->
@@ -36,7 +36,7 @@ SILICA . day <span id = "days"></span> . <span id = "light-phrase"></span>
 	
 <div id = "thought" class = "box">
 	<div style = "text-align: center; grid-column: 2 / 3; grid-row: 2 / 3;">THOUGHT:</div>
-	<div class = "in-box" style = "font-style: italic; overflow: hidden; grid-column: 2 / 3; grid-row: 3 / 4;">
+	<div class = "in-box" style = "font-style: italic; overflow: auto; grid-column: 2 / 3; grid-row: 3 / 4;">
 		<div class = "text">
 			<ul>
 			<span id = "thought-array"></span>
@@ -57,8 +57,7 @@ SILICA . day <span id = "days"></span> . <span id = "light-phrase"></span>
 			<div class = "in-box" style = "overflow-wrap: anywhere; font-size: 24px; line-height: 14px; width: 155px; padding: 15px; height: 280px;">
 				<span id = "sand-count"></span>
 			</div>
-			
-			<span id = "gather-msg" style = "margin-left: 7.5px; font-style: italic; font-size: 12px;"></span>
+			<span id = "gather-msg" style = "font-style: italic; font-size: 12px;"></span>
 		</div> 
 		
 		<div id = "sandglass-tab" class = "tab-content text">
@@ -74,15 +73,17 @@ SILICA . day <span id = "days"></span> . <span id = "light-phrase"></span>
 		<button class = "navigation" onClick = "tabSwitch(event, 'sandglass-tab')">SANDGLASS</button>
 	</div>
 </div>
-	
-<div style = "grid-column: 3 / 4; grid-row: 5 / 20;" class = "box">
-</div>
-	
-</div>
 
+<div style = "grid-column: 1 / 2; grid-row: 12 / 20; background-color: #56483a; color: #998067; text-align: center; vertical-align: middle; font-size: smaller; font-style: italic; line-height: 325px; opacity: 33%;" class = "box">locked</div>
+
+<div style = "grid-column: 3 / 4; grid-row: 1 / 8; background-color: #56483a; color: #998067; text-align: center; vertical-align: middle; font-size: smaller; font-style: italic; line-height: 325px; opacity: 33%;" class = "box">locked</div>
+
+<div style = "grid-column: 3 / 4; grid-row: 8 / 20; background-color: #56483a; color: #998067; text-align: center; vertical-align: middle; font-size: smaller; font-style: italic; line-height: 325px; opacity: 33%;" class = "box">locked</div>
+
+</div>
 
 <footer>
-	temporary dev shit: time <span id = "game-time"></span> | light: <span id = "light-level"></span>% | by ellory erecius
+	by ellory erecius
 </footer>
 
 </body>
