--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <title id="site-title">SILICA . day 0</title>
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=DM+Mono&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
@@ -16,8 +18,12 @@ SILICA . day <span id="days"></span> . <span id="light-phrase"></span>
 <hr>
 </header>
 
-<div title="no functionality yet LOOOL" style="font-size: smaller; position: absolute; top: 7.5px; right: 7.5px;">
-  save . load . export .  import
+<div id="changelog">
+  testing
+</div>
+
+<div style="font-size: smaller; position: absolute; top: 7.5px; right: 7.5px;">
+  version 0.1.1-alpha (<a href="changelog.txt" target="_blank" rel="noopener noreferrer">changelog</a>) . <span onclick="devMode()">devmode</span>
 </div>
 
 <div class="body-grid">
@@ -49,15 +55,14 @@ SILICA . day <span id="days"></span> . <span id="light-phrase"></span>
 <div id="log" class="box">
     <div style="text-align: center; grid-column: 2 / 4; grid-row: 2 / 3;">LOG:</div>
 	<div class="in-box" style="grid-column: 2 / 4; grid-row: 3 / 4">
-	  <div class="text" style="margin-left: 37.5px;">
-		<span id="reeds"></span><span id="reed-gained" class="opac-decay mat-gained"></span>
+	  <div class="text">
+		<span id="reeds"></span> reeds <span id="reeds-gained" class="opac-decay mat-gained"></span>
 		<br>
-	    <span id="clay"></span><span id="clay-gained" class="opac-decay mat-gained"></span>
+	    <span id="clay"></span> clay <span id="clay-gained" class="opac-decay mat-gained"></span>
 		<br>
-		<span id="fabric"></span><span id="fabric-gained" class="opac-decay mat-gained"></span>
+		<span id="fabric"></span> fabric <span id="fabric-gained" class="opac-decay mat-gained"></span>
 	  </div>
   </div>
-  <div style="grid-column: 2 / 3; grid-row: 3 / 4; margin-left: 7.5px; margin-top: 19px; font-weight: bold; font-size: 24px; line-height: 17px; text-align: center;">𓇌<br>𓇤<br>𓄵</div>
 </div>
 
 
@@ -79,7 +84,12 @@ SILICA . day <span id="days"></span> . <span id="light-phrase"></span>
 	  <button id="wander-button" class="normal" onClick="wander()" title="THOUGHT:&#013;there must be more than sand&#013;around here. . ." style="width: 285px;">WANDER THE DESERT <span id="wander-timer"></span></button>
 	  <div id="map-container" class="in-box">
 		<pre><span id="map"></span></pre>
-		m̲irage . w̲reck
+		
+		<div id="key">key
+		  <span id="key-content">
+		    m = mirage<br>w = wreck<br>? = ???<br>? = ???<br>? = ???<br>? = ???<br><br><br><br><br>mouseout to return
+		  </span>
+		</div>
 	  </div>
 	  <div id="scavenge-msg"></div>
 	</div>
@@ -87,12 +97,14 @@ SILICA . day <span id="days"></span> . <span id="light-phrase"></span>
     </div>	
     
     <div id="sandglass-tab" class="tab-content text">
-      <div class="in-box" style="width: auto; float: left;">
         hello LOL how are you?
-      </div>
     </div>
     
 	<div id="craft-tab" class="tab-content text">
+	ok let's see
+	</div>
+	
+	<div id="characters-tab" class="tab-content text">
 	ok let's see
 	</div>
 	
