--- a/index.html
+++ b/index.html
@@ -97,11 +97,14 @@ SILICA . day <span id="days"></span> . <span id="light-phrase"></span>
     </div>	
     
     <div id="sandglass-tab" class="tab-content text">
-        hello LOL how are you?
+        <img src="assets/sandglass-broken.png" alt="IMAGE ID: A BROKEN HOURGLASS"></img><br>
+		The SANDGLASS is broken.
     </div>
     
 	<div id="craft-tab" class="tab-content text">
-	ok let's see
+	BUNDLE: 10 reeds [dropdown for number] <button class="normal">CRAFT</button>
+	SAIL: 3 bundle, 20 fabric [dropdown for number] [craft]
+	hover for information;
 	</div>
 	
 	<div id="characters-tab" class="tab-content text">
@@ -125,6 +128,7 @@ SILICA . day <span id="days"></span> . <span id="light-phrase"></span>
 
 <footer>
   by ellory erecius
+  <audio src="assets/audio/drone.mp3" autoplay loop></audio>
 </footer>
 
 </body>
