added sound, updated changelog

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ SILICA . day <span id="days"></span> . <span id="light-phrase"></span>
 </div>
 
 <div style="font-size: smaller; position: absolute; top: 7.5px; right: 7.5px;">
-  version 0.1.1-alpha (<a href="changelog.txt" target="_blank" rel="noopener noreferrer">changelog</a>) . <span onclick="devMode()">devmode</span>
+  version 0.1.2-alpha (<a href="changelog.txt" target="_blank" rel="noopener noreferrer">changelog</a>) . <span onclick="devMode()">devmode</span>
 </div>
 
 <div class="body-grid">
@@ -102,6 +102,8 @@ SILICA . day <span id="days"></span> . <span id="light-phrase"></span>
     </div>
     
 	<div id="craft-tab" class="tab-content text">
+	CURRENTLY UNDER CONSTRUCTION
+	
 	BUNDLE: 10 reeds [dropdown for number] <button class="normal">CRAFT</button>
 	SAIL: 3 bundle, 20 fabric [dropdown for number] [craft]
 	hover for information;
